plugins {
	id 'com.github.johnrengelman.shadow' version '8.1.1'
	id 'maven-publish'
	id 'java-library'
	id 'eclipse'
	id 'net.neoforged.moddev' version '2.0.78'
	id 'idea'
}


java.toolchain.languageVersion = JavaLanguageVersion.of(21)

base {
	archivesName = "${project.archives_base_name}-mc${project.minecraft_version}"
}

version = project.mod_version
group = project.maven_group

sourceSets {
//	desktop {
//	}


	sodiumCompatibility {
		java {
			compileClasspath += main.compileClasspath
			compileClasspath += main.output
		}
	}

}

neoForge {
	version = project.neo_version

	parchment {
		mappingsVersion = project.parchment_mappings_version
		minecraftVersion = project.parchment_minecraft_version
	}

	runs {
		client {
			client()

			systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
		}

		server {
			server()
			programArgument '--nogui'
			systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
		}

		gameTestServer {
			type = "gameTestServer"
			systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
		}

		data {
			data()
			programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
		}

		configureEach {
			systemProperty 'forge.logging.markers', 'REGISTRIES'

			logLevel = org.slf4j.event.Level.DEBUG
		}
	}

	mods {
		"${mod_id}" {
			sourceSet(sourceSets.main)
//			sourceSet sourceSets.desktop
			sourceSet sourceSets.sodiumCompatibility
		}
	}
}

repositories {
	maven {
		name = "CurseForge"
		url = "https://cursemaven.com"
		content {
			includeGroup "curse.maven"
		}
	}
	maven {
		name = "Modrinth"
		url = "https://api.modrinth.com/maven"
		content {
			includeGroup "maven.modrinth"
		}
	}
	maven {
		url "https://maven.blamejared.com/"
	}
	maven {
		url "https://maven.neoforged.net/releases"
	}
	mavenCentral()
}

dependencies {

	//implementation "org.embeddedt:embeddium-${minecraft_version}:${embeddium_version}"
	implementation "maven.modrinth:embeddium:${embeddium_version}"
	compileOnly("maven.modrinth:distanthorizonsapi:3.0.0")

	implementation jarJar("io.github.douira:glsl-transformer:2.0.2")
	implementation jarJar("org.anarres:jcpp:1.4.14")


}


// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
	var replaceProperties = [
			neo_version            : neo_version,
			neo_version_range      : neo_version_range,
			loader_version_range   : loader_version_range,
			mod_version            : mod_version
	]
	inputs.properties replaceProperties
	expand replaceProperties
	from "src/main/templates"
	into "build/generated/sources/modMetadata"
}
// Include the output of "generateModMetadata" as an input directory for the build
// this works with both building through Gradle and the IDE.
sourceSets.main.resources.srcDir generateModMetadata
// To avoid having to run "generateModMetadata" manually, make it run on every project reload
neoForge.ideSyncTask generateModMetadata

shadowJar {
	configurations = [project.configurations.shadow]

	from jar.archiveFile

	relocate 'org.apache.commons.collections4', 'oculus.org.apache.commons.collections4'

	archiveClassifier.set "shadow"

	manifest {
		attributes(
				'Main-Class': 'net.irisshaders.iris.LaunchWarn'
		)
	}
}
//
//remapJar {
//	inputFile.set shadowJar.archiveFile
//	dependsOn shadowJar
//}
configurations {
	runtimeClasspath.extendsFrom localRuntime
}

jar {
	from sourceSets.sodiumCompatibility.output
	//from sourceSets.desktop.output
}

java {
	withSourcesJar()
}

sourcesJar {
	from sourceSets.sodiumCompatibility.allSource
	//from sourceSets.desktop.allSource
}

publishing {
	publications {
		mavenJava(MavenPublication) {
			from components.java
		}
	}

	repositories {
	}
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
	module {
		downloadSources = true
		downloadJavadoc = true
	}
}
